Update branding from "MEGA" to "WASHUN" in multiple HTML files

--- a/www.megamachinery.com/contact-us/index.html
+++ b/www.megamachinery.com/contact-us/index.html
@@ -4505,7 +4505,8 @@
                                                         class="vc_empty_space_inner"></span></div>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p style="text-align: left;"><span style="font-size: 18px;">Mega
+                                                        <p style="text-align: left;"><span
+                                                                style="font-size: 18px;">WASHUN
                                                                 Machinery’s products go to market through more than 100
                                                                 countries worldwide. We always try to provide the most
                                                                 reliable packaging solution for every costumer from
@@ -4557,8 +4558,9 @@
                                                         class="vc_empty_space_inner"></span></div>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p style="text-align: left;"><span style="font-size: 18px;">Mega
-                                                                Machinery’s products go to market through more than 100
+                                                        <p style="text-align: left;"><span
+                                                                style="font-size: 18px;">Washun Machinery’s products go
+                                                                to market through more than 100
                                                                 countries worldwide. We always try to provide the most
                                                                 reliable packaging solution for every costumer from
                                                                 every corner of the world. After purchasing our
