--- a/www.megamachinery.com/portfolio/electric-stretch-blow-moulding-machines/index.html
+++ b/www.megamachinery.com/portfolio/electric-stretch-blow-moulding-machines/index.html
@@ -4568,7 +4568,8 @@
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
                                                         <p>EB Series is the latest linear designed Electric Stretch Blow
-                                                            Moulding Machine developed after years of R&amp;D by Mega.
+                                                            Moulding Machine developed after years of R&amp;D by WASHUN
+                                                            .
                                                             Thanks to the variable pitch unit, synchronized heating
                                                             system and high speed clamping design, the 10 cavity machine
                                                             makes 0.5L water bottles at 16,000BPH. The bottle production
