--- a/www.megamachinery.com/portfolio/filling-packaging-equipments/index.html
+++ b/www.megamachinery.com/portfolio/filling-packaging-equipments/index.html
@@ -4570,7 +4570,7 @@
 
                                                     </div>
                                                 </div>
-                                                <h4 class='heading-left  style-1' style='color: #1e73be'><span>Mega
+                                                <h4 class='heading-left  style-1' style='color: #1e73be'><span>WASHUN
                                                         Supplies</span></h4>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
