--- a/www.megamachinery.com/products/index.html
+++ b/www.megamachinery.com/products/index.html
@@ -4535,7 +4535,7 @@
                                                                                 machinery
                                                                                 Mold is the professional semi-automatic
                                                                                 blow moulding machines manufacturer,
-                                                                                supplier and maker in China. Mega
+                                                                                supplier and maker in China. WASHUN
                                                                                 Machinery has rich history of
                                                                                 manufacturing semi-automatic blow
                                                                                 moulding machine.</span> <a
@@ -4779,7 +4779,8 @@
                                                         <div class="wpb_text_column wpb_content_element ">
                                                             <div class="wpb_wrapper">
                                                                 <h6 style="text-align: center;"><span
-                                                                        style="color: #000000;">WASHUN is the professional
+                                                                        style="color: #000000;">WASHUN is the
+                                                                        professional
                                                                         Chinese PET preform mould manufacturer, supplier
                                                                         and maker. Our PET mould department.. <a
                                                                             href="pet-moulds/index.html">[More.]</a></span>
