--- a/www.megamachinery.com/products/pet-moulds/pet-preform-moulds/index.html
+++ b/www.megamachinery.com/products/pet-moulds/pet-preform-moulds/index.html
@@ -4567,7 +4567,7 @@
                                                         <p>Ywashun machinery offers series of plastic injection molds to
                                                             turn your plastic product design conception into reality,
                                                             such as molds for preforms, closure, plastic bottles.</p>
-                                                        <p>Mega’s preform molds are equipped with advance valve gate
+                                                        <p>WASHUN ’s preform molds are equipped with advance valve gate
                                                             system with blanced hot runner design. 20g preform mold
                                                             reaches 12 sec with 2 stage post cooling robotic system when
                                                             worked on two stage injection system.</p>
