--- a/www.megamachinery.com/solution/wide-mouth-containers-jar/index.html
+++ b/www.megamachinery.com/solution/wide-mouth-containers-jar/index.html
@@ -4551,7 +4551,8 @@
                                                         <p>At Ywashun machinery, We offer the two stage stretch blow
                                                             molding equipments for wide openings preforms. Our machine
                                                             is built for the neck finishes up to 140mm and even bigger
-                                                            depends on the customers needs. Mega’s wide mouth option can
+                                                            depends on the customers needs. WASHUN ’s wide mouth option
+                                                            can
                                                             be added to our entire standard automatic reheat stretch
                                                             blow molding machine.</p>
                                                         <p>The economic manual machine <strong>MG-Jar700</strong> is
