Contact image is updated

--- a/www.megamachinery.com/contact-us/index.html
+++ b/www.megamachinery.com/contact-us/index.html
@@ -4537,7 +4537,6 @@
                                             <div class="wpb_wrapper">
                                                 <div
                                                     class="wpb_single_image wpb_content_element vc_align_left wpb_content_element">
-
                                                     <figure class="wpb_wrapper vc_figure">
                                                         <div class="vc_single_image-wrapper   vc_box_border_grey"><img
                                                                 fetchpriority="high" decoding="async" width="616"
@@ -4621,7 +4620,7 @@
                                                         <td class='info-table-content'><strong><a
                                                                     href='../index.html'><a href="../index.html"
                                                                         target="_blank"
-                                                                        rel="noopener noreferrer">http://www.megamachinery.com/</a></a></strong>
+                                                                        rel="noopener noreferrer">http://www.ywashun.com/</a></a></strong>
                                                         </td>
                                                     </tr>
                                                 </table>
