Update branding from "MEGA" to "WASHUN" across multiple HTML files

--- a/www.megamachinery.com/gallery/index.html
+++ b/www.megamachinery.com/gallery/index.html
@@ -4753,7 +4753,7 @@
                                                                 sizes="auto, (max-width: 750px) 100vw, 750px" /></a>
                                                     </figure>
                                                 </div>
-                                                <h5 class='heading-middle  divider-lg'><span>MEGA’s daily</span></h5>
+                                                <h5 class='heading-middle  divider-lg'><span>WASHUN’s daily</span></h5>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
                                                         <h6 style="text-align: center;"><span style="color: #000000;">I
