--- a/www.megamachinery.com/portfolio/32-cavity-preform-mould-for-38mm-neck-finish/index.html
+++ b/www.megamachinery.com/portfolio/32-cavity-preform-mould-for-38mm-neck-finish/index.html
@@ -4587,7 +4587,7 @@
                                                             gate, ensure there is no any stringing form on the injection
                                                             gate of the performs. The cam roller design help the
                                                             operator save the maintenance time of the molds. The PET
-                                                            preform mold is designed for MEGA’s injection molding
+                                                            preform mold is designed for WASHUN’s injection molding
                                                             system. The weight of the preforms is 50g, Cycle time is 43
                                                             Sec with general PET screw injection molding machine. It
                                                             reaches 23 Sec with 3 stage post cooling system.</p>
