--- a/www.megamachinery.com/portfolio/4-cavity-5-gallon-preform-mould-for-returnable-5-gallon-pet-bottles/index.html
+++ b/www.megamachinery.com/portfolio/4-cavity-5-gallon-preform-mould-for-returnable-5-gallon-pet-bottles/index.html
@@ -4590,7 +4590,8 @@
                                                             wall performs or 5 gallon performs. The thread plates are
                                                             slide by the cam roller system; it is free of the
                                                             maintenance. This 5 gallon preform mold is designed for
-                                                            MEGA’s injection molding system. The weight of the preforms
+                                                            WASHUN’s injection molding system. The weight of the
+                                                            preforms
                                                             is 700g, Cycle time is 120 Sec with general PET screw
                                                             injection molding machine. If adding the robot post cooling
                                                             system with our preform molding system for those thick wall
