--- a/www.megamachinery.com/portfolio/4-cavity-thick-wall-preform-mould/index.html
+++ b/www.megamachinery.com/portfolio/4-cavity-thick-wall-preform-mould/index.html
@@ -4586,7 +4586,8 @@
                                                             ensure the quality of injection molded thick wall performs
                                                             or 5 gallon performs. The thread plates are slide by the cam
                                                             roller system; it is free of the maintenance. This thick
-                                                            wall preform mould is designed for MEGA’s injection molding
+                                                            wall preform mould is designed for WASHUN’s injection
+                                                            molding
                                                             system. The weight of the preforms is 330g, Cycle time is 95
                                                             Sec with general PET screw injection molding machine. If
                                                             adding the robot post cooling system with our preform
