--- a/www.megamachinery.com/portfolio/72-cavity-preform-mould-for-30-25-neck-finish/index.html
+++ b/www.megamachinery.com/portfolio/72-cavity-preform-mould-for-30-25-neck-finish/index.html
@@ -4588,7 +4588,8 @@
                                                             any stringing form on the injection gate of the performs.
                                                             The cam roller design help the operator save the maintenance
                                                             time of the molds. The PET preform mold is designed for
-                                                            MEGA’s injection molding system. The weight of the preforms
+                                                            WASHUN’s injection molding system. The weight of the
+                                                            preforms
                                                             is 15.5g, Cycle time is 28 Sec with general PET screw
                                                             injection molding machine. It reaches 14 Sec with 3 stage
                                                             post cooling system.</p>
