--- a/www.megamachinery.com/portfolio/pet-injection-moulding-machines/index.html
+++ b/www.megamachinery.com/portfolio/pet-injection-moulding-machines/index.html
@@ -4595,7 +4595,7 @@
 														<p>WASHUN has involved with the PET Prefrom molding system since
 															late 80th, According to the experience of the building the
 															preform tools, The PET series Injection molding machine has
-															been designed according to the property of MEGA’s own
+															been designed according to the property of WASHUN’s own
 															preform moulds.WASHUNprovides the different options for our
 															PET machine, such as the additional pressure holding system,
 															the 25:1 PET screw with extended frame base, double pumps
