--- a/www.megamachinery.com/portfolio/32-cavity-preform-mould-for-30-25-neck-finish/index.html
+++ b/www.megamachinery.com/portfolio/32-cavity-preform-mould-for-30-25-neck-finish/index.html
@@ -4588,7 +4588,8 @@
                                                             there is no any stringing form on the injection gate of the
                                                             performs. The cam roller design help the operator save the
                                                             maintenance time of the molds. The PET preform mold is
-                                                            designed for MEGA’s injection molding system. The weight of
+                                                            designed for WASHUN’s injection molding system. The weight
+                                                            of
                                                             the preforms is 17g, Cycle time is 23 Sec with general PET
                                                             screw injection molding machine. It reaches 11 Sec with 3
                                                             stage post cooling system.</p>
