--- a/www.megamachinery.com/portfolio/48-cavity-preform-mould-for-pco1810-neck/index.html
+++ b/www.megamachinery.com/portfolio/48-cavity-preform-mould-for-pco1810-neck/index.html
@@ -4588,7 +4588,8 @@
                                                             any stringing form on the injection gate of the performs.
                                                             The cam roller design help the operator save the maintenance
                                                             time of the molds. The PET preform mold is designed for
-                                                            MEGA’s injection molding system. The weight of the preforms
+                                                            WASHUN’s injection molding system. The weight of the
+                                                            preforms
                                                             is 22g, Cycle time is 26 Sec with general PET screw type of
                                                             injection molding machine. It could reach 12 Sec with 3
                                                             stage post cooling system.</p>
