--- a/www.megamachinery.com/portfolio/5-gallon-preform-mould-for-one-way-using-5-gallon-pet-botte/index.html
+++ b/www.megamachinery.com/portfolio/5-gallon-preform-mould-for-one-way-using-5-gallon-pet-botte/index.html
@@ -4588,7 +4588,8 @@
                                                             wall performs or 5 gallon performs. The thread plates are
                                                             slide by the cam roller system; it is free of the
                                                             maintenance. This thick wall preform mould is designed for
-                                                            MEGA’s injection molding system. The weight of the preforms
+                                                            WASHUN’s injection molding system. The weight of the
+                                                            preforms
                                                             is 415g, Cycle time is 110 Sec with general PET screw
                                                             injection molding machine. If adding the robot post cooling
                                                             system with our preform molding system for those thick wall
