Ywashun to Washun

--- a/www.megamachinery.com/support/index.html
+++ b/www.megamachinery.com/support/index.html
@@ -4406,7 +4406,7 @@
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page"><a
                                                 href="../gallery/our-clients/index.html">Our Clients</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page"><a
-                                                href="../gallery/mega-machinery-daily/index.html">Ywashun machinery
+                                                href="../gallery/mega-machinery-daily/index.html">
                                                 Daily</a></li>
                                     </ul>
                                 </li>
