--- a/www.megamachinery.com/index.html
+++ b/www.megamachinery.com/index.html
@@ -4531,7 +4531,7 @@
 										<li class="menu-item menu-item-type-post_type menu-item-object-page"><a
 												href="gallery/our-clients/index.html">Our Clients</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page"><a
-												href="gallery/mega-machinery-daily/index.html">Washun machinery
+												href="gallery/mega-machinery-daily/index.html">
 												Daily</a>
 										</li>
 									</ul>
